--- a/css/styles.css
+++ b/css/styles.css
@@ -168,6 +168,10 @@ input[type="radio"].visually-hidden {
 	color: #fff;
 }
 
+.search-input:hover {
+	background-color: #212a3a;
+}
+
 .search-input:hover ~ .search-btn .search-icon {
 	fill: #fff;
 }
@@ -257,13 +261,19 @@ input[type="radio"].visually-hidden {
 	opacity: 1;
 }
 
-.bookmark-link:hover {
+.bookmark-link:hover,
+.basket-link:hover {
 	background-color: #212a3a;
 }
 
 .bookmark-link:active::before,
 .basket-link:active::before {
 	opacity: 0.5;
+}
+
+.bookmark-link:active,
+.basket-link:active {
+	color: rgba(255, 255, 255, 0.6);
 }
 
 .bookmark-link:active {
@@ -330,6 +340,7 @@ input[type="radio"].visually-hidden {
 	line-height: 21px;
 	border: 3px solid #fff;
 	display: inline-block;
+	vertical-align: top;
 	margin-bottom: 4px;
 }
 
@@ -553,16 +564,13 @@ input[type="radio"].visually-hidden {
 
 .offers-card {
 	display: inline-block;
+	vertical-align: top;
 	width: 300px;
 	height: 123px;
 	background-color: #000;
 	margin-right: 20px;
 	margin-bottom: 20px;
 	background-repeat: no-repeat;
-}
-
-.offers-card:active {
-	box-shadow: 0 4px 10px 0 rgba(41, 52, 73, 0.5);
 }
 
 .offers-card-material {
@@ -617,7 +625,7 @@ input[type="radio"].visually-hidden {
 }
 
 .offers-title {
-	font-weight: 600;
+	font-weight: 700;
 	font-size: 24px;
 	line-height: 30px;
 	color: #fff;
@@ -634,6 +642,7 @@ input[type="radio"].visually-hidden {
     margin-top: 12px;
 	min-width: 135px;
 	display: inline-block;
+	vertical-align: top;
 	text-transform: uppercase;
 	padding: 10px;
 	background-color: rgba(0, 0, 0, 0.1);
@@ -688,7 +697,7 @@ input[type="radio"].visually-hidden {
 .slide-title {
 	font-size: 36px;
 	line-height: 36px;
-	font-weight: 600;
+	font-weight: 700;
 	text-transform: uppercase;
 	margin: 0;
 	margin-bottom: 2px;
@@ -1059,21 +1068,21 @@ legend {
 	transform: translateY(-50%);
 	width: 23px;
 	height: 23px;
-	border: 2px solid #c5c5c5;
+	border: 2px solid rgb(181, 181, 181);
 	border-radius: 2px;
 }
 
 .filter-input-checkbox:checked + label::after {
 	content: '';
 	position: absolute;
-	top: 50%;
-	left: -35px;
+	top: 1px;
+	left: -29px;
 	transform: translateY(-50%);
-	width: 27px;
-	height: 23px;
-	background-image: url('../img/icons/checkbox-on.svg');
-	background-repeat: no-repeat;
-	background-position: 0 0;
+	width: 20px;
+	height: 11px;
+	border-left: 4px solid rgb(197, 197, 197);
+	border-bottom: 4px solid rgb(197, 197, 197);
+	transform: rotate(-45deg);
 }
 
 .filter-input-radio + label::before {
@@ -1084,8 +1093,12 @@ legend {
 	transform: translateY(-50%);
 	width: 25px;
 	height: 25px;
-	border: 3px solid #c5c5c5;
+	border: 3px solid rgb(197, 197, 197);
 	border-radius: 50%;
+}
+
+.filter-input-radio:checked + label::before {
+	border-color: rgb(197, 197, 197);
 }
 
 .filter-input-radio:checked + label::after {
@@ -1096,13 +1109,50 @@ legend {
 	transform: translateY(-50%);
 	width: 9px;
 	height: 9px;
-	background-color: #c5c5c5;
+	background-color: rgb(197, 197, 197);
 	border-radius: 50%;
 }
 
+.filter-input-checkbox + label:hover::before {
+	border-color: rgb(197, 197, 197);
+}
+
+.filter-input-radio + label:hover::before {
+	border-color: rgb(181, 181, 181);
+}
+
+.filter-input-checkbox:checked + label:hover::before,
+.filter-input-checkbox:checked + label:hover::after,
+.filter-input-radio:checked + label:hover::before {
+	border-color: rgb(181, 181, 181);
+}
+
+.filter-input-radio:checked + label:hover::after {
+	background-color: rgb(181, 181, 181);
+}
+
+.filter-input:disabled + label::before {
+	border-color: rgba(181, 181, 181, 0.3);
+}
+
 .filter-input:disabled + label {
-	color: #000;
-	opacity: 0.5;
+	color: rgba(0, 0, 0, 0.4)
+}
+
+.filter-input:checked:disabled ~ label {
+	color: rgba(0, 0, 0, 0.4);
+} 
+
+.filter-input:checked:disabled ~ label::before {
+	border-color: rgba(181, 181, 181, 0.3);
+}
+
+.filter-input:checked:disabled ~ label::after {
+	border-color: rgba(181, 181, 181, 0.3);
+}
+
+.filter-input-radio:checked:disabled + label::after {
+	background-color: rgba(181, 181, 181, 0.3);
 }
 
 .btn-show {
@@ -1185,6 +1235,7 @@ legend {
 	line-height: 18px;
 	text-transform: uppercase;
 	display: inline-block;
+	vertical-align: top;
 	width: 135px;
 }
 
@@ -1270,8 +1321,8 @@ legend {
 	font-family: 'PT Sans', 'Arial', sans-serif;
 	font-size: 17px;
 	line-height: 18px;
-	font-weight: 600;
 	text-transform: uppercase;
+	font-weight: 700;
 }
 
 .catalog-item-discount {
@@ -1390,9 +1441,9 @@ legend {
 	border: none;
 }
 
-
 .sorting-link-current {
 	color: #ee3643;
+	border-bottom-style: none;
 }
 
 .by-price {
@@ -1412,6 +1463,10 @@ legend {
 .arrow-down {
 	border: 20px solid transparent;
 	border-top: 20px solid green;
+}
+
+.arrow-up-current {
+	
 }
 */
 
@@ -1532,7 +1587,6 @@ legend {
 	font-weight: 400;
 	margin: 0;
 	margin-bottom: 24px;
-	margin-left: -9px;
 	text-transform: uppercase;
 }
 
@@ -1785,6 +1839,7 @@ legend {
 
 .information p:nth-of-type(2) {
 	margin-bottom: 25px;
+	width: 400px;
 }
 
 .collaboration {
@@ -1820,6 +1875,7 @@ legend {
 
 .about-company {
 	display: inline-block;
+	vertical-align: top;
 	padding: 10px 40px 10px 41px;
 }
 
@@ -1843,6 +1899,7 @@ legend {
 
 .write-us {
 	display: inline-block;
+	vertical-align: top;
 	padding: 10px 59px 10px 63px;
 }
 
@@ -1909,7 +1966,7 @@ legend {
 
 .footer-top p {
 	margin: 0;
-	color: #fff;
+	color: #f3f7f9;
 	font-size: 18px;
 	line-height: 24px;
 	margin-left: 5px;
@@ -1949,7 +2006,7 @@ legend {
 }
 
 .footer-navigation a {
-	color: #fff;
+	color: #f3f7f9;
 }
 
 .footer-navigation a:hover {
@@ -1958,7 +2015,7 @@ legend {
 
 .footer-navigation a:focus {
 	outline: none;
-	color: #fff;
+	color: #f3f7f9;
 	opacity: 0.5;
 }
 
